--- a/bootstrap/getting-started.1
+++ b/bootstrap/getting-started.1
@@ -25,14 +25,6 @@
 
 <link href="assets/css/docs.min.css" rel="stylesheet">
 
-<!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-<script src="assets/js/ie-emulation-modes-warning.js"></script>
-
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-  <script src="//cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
 
 <!-- Favicons -->
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -59,24 +51,22 @@
     <nav id="bs-navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="active">
-          <a href="getting-started.1" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-起步'])">起步</a>
+          <a href="getting-started.1">起步</a>
         </li>
         <li>
-          <a href="css/index.html" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-全局CSS样式'])">全局 CSS 样式</a>
+          <a href="css/index.html">全局 CSS 样式</a>
         </li>
         <li>
-          <a href="components.1" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-组件'])">组件</a>
+          <a href="components.1">组件</a>
         </li>
         <li>
-          <a href="javascript/index.html" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-JavaScript插件'])">JavaScript 插件</a>
+          <a href="javascript/index.html">JavaScript 插件</a>
         </li>
-        <li>
-          <a href="customize/index.html" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-定制'])">定制</a>
-        </li>
-        <li><a href="//expo.bootcss.com" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-网站实例'])" target="_blank">网站实例</a></li>
+
+
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="//www.bootcss.com/" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-Bootstrap中文网'])" target="_blank">Bootstrap中文网</a></li>
+        <li><a href="//www.bootcss.com/" target="_blank">Bootstrap中文网</a></li>
       </ul>
     </nav>
   </div>
@@ -992,24 +982,5 @@ Copy any changes made here over to the README too. -->
   <script src="assets/js/docs.min.js"></script>
 
 
-
-
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-
-
-
-<!-- Analytics
-================================================== -->
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " //");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fbdb993b828cbe079a7fbc1a951f44726' type='text/javascript'%3E%3C/script%3E"));
-</script>
-
-<!-- 全局统计代码 -->
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " //");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F079fac161efc4b2a6f31e80064f14e82' type='text/javascript'%3E%3C/script%3E"));
-</script>
   </body>
 </html>
